[package]
name = "rsed"
version = "0.1.0"
authors = ["Pablo Berganza <pberganza10@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pablo-abc/rsed"
description = "A very rusty implementation of sed. Not to be taken seriously."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
